# grid_tilings

./: .gitignore  LICENSE  README.md  grid_tilings.py  pyproject.toml  testing.ipynb  testing_02.ipynb  testing_03.ipynb  testing_04.ipynb  testing_05.ipynb  testing_06.ipynb  testing_07.ipynb  testing_08.ipynb  testing_09.ipynb  testing_colour.ipynb
src/: grid_tilings.py
