[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "grid_tilings"
version = "1.0.0"
dependencies = [
  "numpy",
  "matplotlib",
]
requires-python = ">= 3.8"
authors = [
  {name = "William Tyler Bradley", email = "william.tyler.bradley@gmail.com"},
]
description = "Creates tilings based on multigrids."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.urls]
Homepage = "https://github.com/WilliamTylerBradley/grid_tilings"